<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.bluewillowherbals.herbalmedicinecalculator.CalculatorFragment">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="com.bluewillowherbals.hebalmedicinecalculator.CalculatorActivity">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/calculate_button_top"
                    android:text="@string/calculate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/clear_button_top"
                    android:text="@string/clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/calculate_button_top"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/custom_border">
                <TextView
                    android:text="@string/desired_title"
                    android:id="@+id/desired_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center"
                    />
                <TextView
                    android:text="@string/desired_alcohol_percentage_header"
                    android:id="@+id/desired_alcohol_percentage_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/desired_alcohol_percentage_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/desired_alcohol_percentage_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background"
                        android:ems="10"
                        android:imeOptions="flagNoExtractUi"
                        android:hint="@string/desired_alcohol_percentage_hint"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:text="@string/desired_volume_header"
                    android:id="@+id/desired_volume_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/desired_volume_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/desired_volume_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background"
                        android:ems="10"
                        android:imeOptions="flagNoExtractUi"
                        android:hint="@string/desired_volume_hint"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/custom_border">
                <TextView
                    android:text="@string/substance_1_title"
                    android:id="@+id/substance_1_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center"
                    />
                <TextView
                    android:text="@string/alcohol_percentage_substance_1_header"
                    android:id="@+id/alcohol_percentage_substance_1_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/substance_1_alcohol_percentage_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/alcohol_percentage_substance_1_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background"
                        android:ems="10"
                        android:imeOptions="flagNoExtractUi"
                        android:hint="@string/alcohol_percentage_substance_1_hint"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:text="@string/volume_substance_1_header"
                    android:id="@+id/volume_substance_1_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/substance_1_volume_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/volume_substance_1_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background"
                        android:ems="10"
                        android:imeOptions="flagNoExtractUi"
                        android:hint="@string/volume_substance_1_hint"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/custom_border">
                <TextView
                    android:text="@string/substance_2_title"
                    android:id="@+id/substance_2_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center"
                    />
                <TextView
                    android:text="@string/alcohol_percentage_substance_2_header"
                    android:id="@+id/alcohol_percentage_substance_2_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/substance_2_alcohol_percentage_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/alcohol_percentage_substance_2_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background"
                        android:ems="10"
                        android:imeOptions="flagNoExtractUi"
                        android:hint="@string/alcohol_percentage_substance_2_hint"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:text="@string/volume_substance_2_header"
                    android:id="@+id/volume_substance_2_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/substance_2_volume_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/volume_substance_2_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background"
                        android:ems="10"
                        android:imeOptions="flagNoExtractUi"
                        android:hint="@string/volume_substance_2_hint"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/calculate_button"
                    android:text="@string/calculate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/clear_button"
                    android:text="@string/clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/calculate_button"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
